--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>etherbrowse</title>
+        <title>EhtherScan-copy</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     </head>
 
@@ -9,7 +9,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-6">
-                        <a href="/" class="navbar-brand" style="color: white"><h1>etherbrowse</h1></a>
+                        <a href="/" class="navbar-brand" style="color: white"><h1>SaideepKasipathy-EtherScan</h1></a>
                         <form class="d-flex" action="/address" method="get">
                             <input class="form-control" placeholder="search by address" name="address" type="text" />&nbsp;
                             <button class="btn btn-primary" type="submit">search</button>
